welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:4: error: expected class or object definition
def faireV(){
^PictureMono1:21: error: expected class or object definition
def marquer(){
^PictureMono1:27: error: Unmatched closing brace '}' ignored here
}
^